--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
+:root {
+    --bg-color: #1B1A17;
+    --text-color: #fff; 
+    --bg-calculator : #99c9ff;
+}
+
+html {
+    box-sizing: border-box;
+    font-family: Lato, sans-serif;
+    font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 .App {
-  text-align: center;
+    height: 100%;
+    padding-top: 1rem;
+    background-color: var(--bg-color);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calculator-container {
+    width: 25rem;
+    height:auto;
+    padding: 0.875rem;
+    background-color: var(--bg-calculator);
+    border-radius: 1.25rem;
+    border: 5px solid #fff;
+    margin: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container-logo {
+    width: 100%;
+    height: 3.125rem;
+    margin: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.container-logo > h1 {
+    margin: .5rem;
+    color: var(--text-color);
+    text-decoration: underline;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.logo {
+    height: 2.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.row {
+    margin: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
